--- a/app/app/package.json
+++ b/app/app/package.json
@@ -31,6 +31,7 @@
     "@nanostores/persistent": "^0.9.1",
     "astro": "^4.3.2",
     "astro-icon": "^1.1.0",
+    "dotenv": "^16.4.5",
     "nanostores": "^0.9.5",
     "sass": "^1.70.0",
     "socket.io-client": "^4.7.4",
