--- a/app/app/package.json
+++ b/app/app/package.json
@@ -26,6 +26,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@iconify-json/eos-icons": "^1.1.10",
     "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/twemoji": "^1.1.15",
     "@iconify-json/uil": "^1.1.8",
     "@iconify/tailwind": "^0.1.4",
     "@nanostores/persistent": "^0.9.1",
