--- a/app/app/package.json
+++ b/app/app/package.json
@@ -37,7 +37,8 @@
     "sass": "^1.70.0",
     "socket.io-client": "^4.7.4",
     "svelte": "^4.2.9",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6"
