Refactor docker compose port config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,4 @@ services:
         GITHUB_SHA: ${GITHUB_SHA:-}
     # Deploy
     ports:
-      # HTTP
-      - target: 80
-        published: ${HTTP_PORT:-80}
-        protocol: tcp
+      - ${HTTP_PORT:-80}:80 # HTTP
