--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ COMPOSE_PROJECT_NAME='env-converter'
 IMAGES_PREFIX='env-converter'
 
 # Override these values with your own in `.env.local`:
+
+# HTTP ports
+HTTP_PORT='' # Exposed port
+HTTP_DOCKER_PORT='' # Container port
+
+# Application configuration
+GITHUB_REPOSITORY_URL=''
+GITHUB_SHA=''
