Refactor docker ports configuration (#10)
* Refactor docker compose port config

* Add argument to configure container http port

* Add env var to set container http port

* Update .env file

* Set default container http port to 8080

* Remove obsolete docker compose version property

* Refactor cicd docker compose config

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -56,6 +56,11 @@ VOLUME /app/node_modules
 
 COPY --link --chmod=755 ./docker-dev-command.sh /usr/local/bin/docker-dev-command
 
+# Expose HTTP port
+ARG PORT=8080
+ENV PORT=${PORT}
+EXPOSE ${PORT}
+
 CMD [ "docker-dev-command" ]
 
 
@@ -92,3 +97,11 @@ WORKDIR /usr/share/nginx/html
 
 # Copy built static website files
 COPY --from=app_prod_build --link /app/dist .
+
+# Expose HTTP port
+ARG PORT=8080
+ENV PORT=${PORT}
+EXPOSE ${PORT}
+
+# Replace port in default Nginx configuration
+RUN sed -i 's/\(listen\s*\)80;/\1'"$PORT"';/' /etc/nginx/conf.d/default.conf
