--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.4'
-
 # Services definition for building & deploying
 
 services:
@@ -12,11 +10,9 @@ services:
       dockerfile: ./Dockerfile
       target: app_prod
       args:
+        PORT: ${HTTP_DOCKER_PORT:-8080}
         GITHUB_REPOSITORY_URL: ${GITHUB_REPOSITORY_URL:-}
         GITHUB_SHA: ${GITHUB_SHA:-}
     # Deploy
     ports:
-      # HTTP
-      - target: 80
-        published: ${HTTP_PORT:-80}
-        protocol: tcp
+      - ${HTTP_PORT:-80}:${HTTP_DOCKER_PORT:-8080} # HTTP
