--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -83,7 +83,12 @@ ARG GITHUB_SHA=""
 ENV GITHUB_SHA=${GITHUB_SHA}
 
 # Build application
-RUN npm run build
+ARG BUILD_CHECK=true
+RUN if [ "${BUILD_CHECK}" = "true" ]; then \
+		npm run build; \
+	else \
+		npm run build-only; \
+	fi
 
 
 # --
@@ -91,6 +96,7 @@ RUN npm run build
 
 FROM nginx_upstream AS app_prod
 
+# Set runtime environment
 ENV APP_ENV=prod
 ENV NODE_ENV=production
 
