Update check CI workflow

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,13 +5,16 @@ on:
   # Run on pull requests to primary branches
   pull_request:
     branches:
-      - main
-      - dev
+      - main # Production
+      - dev # Development
     paths:
+      # CI files
       - '.github/workflows/check.yml'
-      - 'app/**'
       - 'docker-compose.yml'
       - 'docker-compose.cicd.yml'
+      - '.env'
+      # Application files
+      - 'app/**'
 
   # Run on manual triggers
   workflow_dispatch:
@@ -31,25 +34,40 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
 
     steps:
 
+      # Steps dependencies
+
       - name: Checkout
         uses: actions/checkout@v4
+
+      # Execution steps
 
       - name: Build for production
         env:
           GITHUB_REPOSITORY_URL: https://github.com/${{ github.repository }}
           GITHUB_SHA: ${{ github.sha }}
           BUILD_CHECK: "true" # Run type checks
-        run: docker compose -f docker-compose.yml -f docker-compose.cicd.yml build
+        run: |
+          # docker compose build
+          docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
+              --env-file .env \
+              build
 
       - name: Copy application files
-        run: docker compose -f docker-compose.yml -f docker-compose.cicd.yml up
+        run: |
+          # docker compose up
+          docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
+              --env-file .env \
+              up
 
       - name: Check application files
         run: |
+          # Check application files
           [ -d ./app/dist ] && [ $(ls -1 ./app/dist | wc -l) -gt 0 ] \
             && echo "Application files found" \
             || ( echo "No application files found" && exit 1 )
