Update deploy CD workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,15 +5,15 @@ on:
   # Run on push on production branches
   push:
     branches:
-      - master
-      - main
-      - prod
-      - production
+      - main # Production
     paths:
+      # CI files
       - '.github/workflows/deploy.yml'
-      - 'app/**'
       - 'docker-compose.yml'
       - 'docker-compose.cicd.yml'
+      - '.env'
+      # Application files
+      - 'app/**'
 
   # Run on manual triggers
   workflow_dispatch:
@@ -33,27 +33,43 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
 
     steps:
 
+      # Steps dependencies
+
       - name: Checkout
         uses: actions/checkout@v4
+
+      # Execution steps
 
       - name: Build for production
         env:
           GITHUB_REPOSITORY_URL: https://github.com/${{ github.repository }}
           GITHUB_SHA: ${{ github.sha }}
           BUILD_CHECK: "false" # Skip type checks
-        run: docker compose -f docker-compose.yml -f docker-compose.cicd.yml build
+        run: |
+          # docker compose build
+          docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
+              --env-file .env \
+              build
 
       - name: Copy application files
-        run: docker compose -f docker-compose.yml -f docker-compose.cicd.yml up
+        run: |
+          # docker compose up
+          docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
+              --env-file .env \
+              up
 
       - name: Chown dist folder to $USER
-        run: sudo chown -R $USER:$USER ./app/dist
+        run: |
+          # chown -R $USER:$USER ./app/dist
+          sudo chown -R $USER:$USER ./app/dist
 
-      - name: Upload artifact
+      - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./app/dist
@@ -62,7 +78,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
 
     # Job dependencies
     needs:
