Fix license in package.json

--- a/app/app/package.json
+++ b/app/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "env-converter",
   "author": "Matiboux",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "version": "0.0.1",
   "private": true,
   "type": "module",
