--- a/app/app/package.json
+++ b/app/app/package.json
@@ -12,7 +12,9 @@
     "build": "astro check && astro build",
     "build-only": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test:vitest": "vitest run",
+    "test:playwright": "playwright test"
   },
   "repository": {
     "type": "git",
@@ -23,24 +25,29 @@
   },
   "homepage": "https://github.com/matiboux/env-converter#readme",
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/svelte": "^7.0.4",
     "@astrojs/tailwind": "^5.1.5",
     "@iconify-json/eos-icons": "^1.2.2",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/twemoji": "^1.2.2",
     "@iconify-json/uil": "^1.2.3",
-    "@iconify/tailwind": "^1.2.0",
+    "@iconify/tailwind4": "^1.0.6",
     "@nanostores/persistent": "^0.10.2",
-    "astro": "^5.5.4",
+    "@tailwindcss/vite": "^4.1.3",
+    "astro": "^5.6.1",
     "astro-icon": "^1.1.5",
-    "dotenv": "^16.4.7",
-    "nanostores": "^0.11.3",
-    "sass": "^1.83.4",
-    "svelte": "^5.19.1",
-    "tailwindcss": "^3.4.17",
-    "toml": "^3.0.0"
+    "dotenv": "^16.5.0",
+    "nanostores": "^1.0.1",
+    "sass": "^1.86.3",
+    "svelte": "^5.26.2",
+    "tailwindcss": "^4.1.3",
+    "toml": "^3.0.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@types/node": "^22.10.7"
+    "@playwright/test": "^1.51.1",
+    "@types/node": "^22.14.1",
+    "vitest": "^3.1.1"
   }
 }
