--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,6 +12,8 @@ on:
       - '.github/workflows/check.yml'
       - 'docker-compose.yml'
       - 'docker-compose.cicd.yml'
+      - 'docker-compose.test-unit.yml'
+      - 'docker-compose.test-e2e.yml'
       - '.env'
       # Application files
       - 'app/**'
@@ -34,7 +36,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
 
     steps:
 
@@ -45,6 +47,14 @@ jobs:
 
       # Execution steps
 
+      - name: Pull dependencies
+        run: |
+          # docker compose pull --ignore-buildable
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
+            --env-file .env \
+            pull --ignore-buildable
+
       - name: Build for production
         env:
           GITHUB_REPOSITORY_URL: https://github.com/${{ github.repository }}
@@ -52,18 +62,22 @@ jobs:
           BUILD_CHECK: "true" # Run type checks
         run: |
           # docker compose build
+          echo "::group::Build details"
+          export DOCKER_UID="$(id -u)"
           docker compose \
-              -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
-              --env-file .env \
-              build
+            -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
+            --env-file .env \
+            build
+          echo "::endgroup::"
 
       - name: Copy application files
         run: |
           # docker compose up
+          export DOCKER_UID="$(id -u)"
           docker compose \
-              -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
-              --env-file .env \
-              up
+            -f ./docker-compose.yml -f ./docker-compose.cicd.yml \
+            --env-file .env \
+            up
 
       - name: Check application files
         run: |
@@ -71,3 +85,173 @@ jobs:
           [ -d ./app/dist ] && [ $(ls -1 ./app/dist | wc -l) -gt 0 ] \
             && echo "Application files found" \
             || ( echo "No application files found" && exit 1 )
+
+  # Test Unit job
+  test-unit:
+    name: Test Unit
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+
+    steps:
+
+      # Steps dependencies
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Execution steps
+
+      - name: Pull dependencies
+        run: |
+          # docker compose pull --ignore-buildable
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+            --env-file .env \
+            pull --ignore-buildable
+
+      - name: Build for E2E tests
+        env:
+          GITHUB_REPOSITORY_URL: https://github.com/${{ github.repository }}
+          GITHUB_SHA: ${{ github.sha }}
+        run: |
+          # docker compose build
+          echo "::group::Build details"
+          export DOCKER_UID="$(id -u)"
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+            --env-file .env \
+            build
+          echo "::endgroup::"
+
+      - name: Start E2E tests
+        run: |
+          # docker compose up
+          export DOCKER_UID="$(id -u)"
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+            --env-file .env \
+            up -d
+
+      - name: List E2E tests services
+        run: |
+          # Set DOCKER_SERVICES environment variable
+          DOCKER_SERVICES="$(
+            docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+              --env-file .env \
+              config --services
+          )"
+          echo "Set DOCKER_SERVICES to '${DOCKER_SERVICES}'"
+          echo "DOCKER_SERVICES<<GITHUB_ENV_EOF" >> $GITHUB_ENV
+          echo "${DOCKER_SERVICES}" >> $GITHUB_ENV
+          echo 'GITHUB_ENV_EOF' >> $GITHUB_ENV
+
+      - name: Wait for E2E tests to finish
+        env:
+          DOCKER_SERVICES: ${{ env.DOCKER_SERVICES }}
+        run: |
+          # docker compose wait
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+            --env-file .env \
+            wait $DOCKER_SERVICES \
+            || exit 0
+
+      - name: Print E2E tests logs
+        env:
+          DOCKER_SERVICES: ${{ env.DOCKER_SERVICES }}
+        run: |
+          # docker compose logs
+          for SERVICE in $DOCKER_SERVICES; do
+            echo "::group::Docker logs for service '${SERVICE}'"
+            docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+              --env-file .env \
+              logs --no-log-prefix $SERVICE
+            echo "::endgroup::"
+          done
+
+  # Test E2E job
+  test-e2e:
+    name: Test E2E
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+
+    steps:
+
+      # Steps dependencies
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Execution steps
+
+      - name: Pull dependencies
+        run: |
+          # docker compose pull --ignore-buildable
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-e2e.yml \
+            --env-file .env \
+            pull --ignore-buildable
+
+      - name: Build for E2E tests
+        env:
+          GITHUB_REPOSITORY_URL: https://github.com/${{ github.repository }}
+          GITHUB_SHA: ${{ github.sha }}
+        run: |
+          # docker compose build
+          echo "::group::Build details"
+          export DOCKER_UID="$(id -u)"
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-e2e.yml \
+            --env-file .env \
+            build
+          echo "::endgroup::"
+
+      - name: Start E2E tests
+        run: |
+          # docker compose up
+          export DOCKER_UID="$(id -u)"
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-e2e.yml \
+            --env-file .env \
+            up -d
+
+      - name: List E2E tests services
+        run: |
+          # Set DOCKER_SERVICES environment variable
+          DOCKER_SERVICES="$(
+            docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.test-e2e.yml \
+              --env-file .env \
+              config --services
+          )"
+          echo "Set DOCKER_SERVICES to '${DOCKER_SERVICES}'"
+          echo "DOCKER_SERVICES<<GITHUB_ENV_EOF" >> $GITHUB_ENV
+          echo "${DOCKER_SERVICES}" >> $GITHUB_ENV
+          echo 'GITHUB_ENV_EOF' >> $GITHUB_ENV
+
+      - name: Wait for E2E tests to finish
+        env:
+          DOCKER_SERVICES: ${{ env.DOCKER_SERVICES }}
+        run: |
+          # docker compose wait
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-e2e.yml \
+            --env-file .env \
+            wait $DOCKER_SERVICES \
+            || exit 0
+
+      - name: Print E2E tests logs
+        env:
+          DOCKER_SERVICES: ${{ env.DOCKER_SERVICES }}
+        run: |
+          # docker compose logs
+          for SERVICE in $DOCKER_SERVICES; do
+            echo "::group::Docker logs for service '${SERVICE}'"
+            docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.test-e2e.yml \
+              --env-file .env \
+              logs --no-log-prefix $SERVICE
+            echo "::endgroup::"
+          done
