Refactor test services exit codes check

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -171,8 +171,12 @@ jobs:
             echo "::endgroup::"
           done
 
-          # Check services for non-zero exit codes
-          echo '::group::Check services for errors'
+          # Check services exit codes
+          echo '::group::Check services exit codes'
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+            --env-file .env \
+            ps -a
           NON_ZERO_EXIT_CODES=$(
             docker compose \
               -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
@@ -183,12 +187,6 @@ jobs:
           )
           if [ -n "${NON_ZERO_EXIT_CODES}" ]; then
             # Non-zero exit code found
-            echo ''
-            echo 'Non-zero exit codes found.'
-            docker compose \
-              -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
-              --env-file .env \
-              ps -a
             exit 1
           fi
           echo '::endgroup::'
@@ -278,8 +276,12 @@ jobs:
             echo "::endgroup::"
           done
 
-          # Check services for non-zero exit codes
-          echo '::group::Check services for errors'
+          # Check services exit codes
+          echo '::group::Check services exit codes'
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+            --env-file .env \
+            ps -a
           NON_ZERO_EXIT_CODES=$(
             docker compose \
               -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
@@ -290,12 +292,6 @@ jobs:
           )
           if [ -n "${NON_ZERO_EXIT_CODES}" ]; then
             # Non-zero exit code found
-            echo ''
-            echo 'Non-zero exit codes found.'
-            docker compose \
-              -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
-              --env-file .env \
-              ps -a
             exit 1
           fi
           echo '::endgroup::'
