Check test services for non-zero exit codes (#44)

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -171,6 +171,26 @@ jobs:
             echo "::endgroup::"
           done
 
+          # Check services exit codes
+          echo '::group::Check services exit codes'
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+            --env-file .env \
+            ps -a
+          NON_ZERO_EXIT_CODES=$(
+            docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+              --env-file .env \
+              ps -a --format '{{.ExitCode}}' \
+            | grep -v '^0$' \
+            || true
+          )
+          if [ -n "${NON_ZERO_EXIT_CODES}" ]; then
+            # Non-zero exit code found
+            exit 1
+          fi
+          echo '::endgroup::'
+
   # Test E2E job
   test-e2e:
     name: Test E2E
@@ -255,3 +275,23 @@ jobs:
               logs --no-log-prefix $SERVICE
             echo "::endgroup::"
           done
+
+          # Check services exit codes
+          echo '::group::Check services exit codes'
+          docker compose \
+            -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+            --env-file .env \
+            ps -a
+          NON_ZERO_EXIT_CODES=$(
+            docker compose \
+              -f ./docker-compose.yml -f ./docker-compose.test-unit.yml \
+              --env-file .env \
+              ps -a --format '{{.ExitCode}}' \
+            | grep -v '^0$' \
+            || true
+          )
+          if [ -n "${NON_ZERO_EXIT_CODES}" ]; then
+            # Non-zero exit code found
+            exit 1
+          fi
+          echo '::endgroup::'
