Update prod image & Add prod command in README (#46)

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,7 +13,7 @@ ARG UID=1001
 # Upstream images
 
 FROM node:22-slim AS node_upstream
-FROM bitnami/nginx:1.27 AS nginx_upstream
+FROM bitnami/nginx:1.29 AS nginx_upstream
 
 
 # --
@@ -225,7 +225,7 @@ FROM nginx_upstream AS app_prod
 # Set runtime environment
 ENV APP_ENV=prod
 
-# Copy app production build
+# Copy app production files
 COPY --from=app_prod_build --link /app/dist .
 
 # Set exposed port
