--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -65,7 +65,7 @@ RUN --mount=type=cache,sharing=locked,target=/var/cache/apt \
 	--mount=type=cache,sharing=locked,target=/var/lib/apt \
 	apt-get update && \
 	apt-get install -y --no-install-recommends sudo && \
-	echo "%sudo ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+	echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 # Create user 'user' in group 'root' & 'sudo'
 RUN USERNAME="$(getent passwd "${UID}" | cut -d: -f1)"; \
@@ -102,9 +102,6 @@ ENV NODE_ENV=development
 # Copy app development dependencies
 COPY --link --from=app_build_dev --chown="${UID}:0" /app/node_modules ./node_modules
 
-# Copy source code
-COPY --link --chown="${UID}:0" ./app .
-
 
 # --
 # Test unit image
@@ -113,6 +110,9 @@ FROM app_test_base AS app_test_unit
 
 # Build arguments
 ARG UID
+
+# Copy source code
+COPY --link --chown="${UID}:0" ./app .
 
 # Run as non-root user
 USER ${UID}:0
@@ -134,9 +134,13 @@ ENV PLAYWRIGHT_BROWSERS_PATH=/etc/playwright/browsers
 # Install Playwright dependencies
 # (hadolint: Ignore non-pinned apt package version)
 # hadolint ignore=DL3008
-RUN --mount=type=cache,sharing=locked,target=/var/cache/apt \
+RUN --mount=type=bind,source=./app/package.json,target=package.json \
+	--mount=type=cache,sharing=locked,target=/var/cache/apt \
 	--mount=type=cache,sharing=locked,target=/var/lib/apt \
 	pnpm exec playwright install --with-deps
+
+# Copy source code
+COPY --link --chown="${UID}:0" ./app .
 
 # Build application
 RUN pnpm run build-only
@@ -168,7 +172,7 @@ RUN mkdir -p ./.astro && chown -R "${UID}:0" ./.astro
 # Create user 'user' in group 'root'
 RUN USERNAME="$(getent passwd "${UID}" | cut -d: -f1)"; \
 	if [ -z "${USERNAME}" ]; then \
-		useradd -lm -u "${UID}" -g "${UID}" -G 0 user; \
+		useradd -lm -u "${UID}" -U -G 0 user; \
 	else \
 		usermod -a -G 0 "${USERNAME}"; \
 	fi
@@ -202,15 +206,27 @@ COPY --link --from=app_build_dev --chown="${UID}:0" /app/node_modules ./node_mod
 # Copy source code
 COPY --link --chown="${UID}:0" ./app .
 
-# Set client environment variables
-ARG GITHUB_REPOSITORY_URL=""
+# Set app environment variables
+# : Deployment configuration
+ARG GITHUB_REPOSITORY_URL=''
 ENV GITHUB_REPOSITORY_URL=${GITHUB_REPOSITORY_URL}
-ARG GITHUB_SHA=""
+ARG GITHUB_SHA=''
 ENV GITHUB_SHA=${GITHUB_SHA}
+ARG VERSION_TAG=''
+ENV VERSION_TAG=${VERSION_TAG}
+# : Astro configuration
+ARG ASTRO_SITE_URL=''
+ENV ASTRO_SITE_URL=${ASTRO_SITE_URL}
+ARG ASTRO_BASE_PATH=''
+ENV ASTRO_BASE_PATH=${ASTRO_BASE_PATH}
+ARG ASTRO_ASSETS_PREFIX=''
+ENV ASTRO_ASSETS_PREFIX=${ASTRO_ASSETS_PREFIX}
+# : Application configuration
+# Add env vars for your application here.
 
 # Build application
-ARG BUILD_CHECK=true
-RUN if [ "${BUILD_CHECK}" = "true" ]; then \
+ARG BUILD_CHECK='true'
+RUN if [ "${BUILD_CHECK}" = 'true' ]; then \
 		npm run build; \
 	else \
 		npm run build-only; \
@@ -225,7 +241,7 @@ FROM nginx_upstream AS app_prod
 # Set runtime environment
 ENV APP_ENV=prod
 
-# Copy app production files
+# Copy app production built files
 COPY --from=app_prod_build --link /app/dist .
 
 # Set exposed port
