Update docker config

--- a/docker-compose.cicd.yml
+++ b/docker-compose.cicd.yml
@@ -20,12 +20,12 @@ services:
       target: app_prod_build
       args:
         UID: ${DOCKER_UID:-${UID:-1000}}
-        BUILD_CHECK: ${BUILD_CHECK:-true}
     # Deploy override
     depends_on:
       app-volumes:
         condition: service_completed_successfully
     user: ${DOCKER_UID:-${UID:-1000}}
-    command: [ "sh", "-c", "rm -rf /dist/* && cp -r /app/dist/* /dist" ]
+    environment: !reset null
+    command: [ 'sh', '-c', 'rm -rf /dist/* && cp -r /app/dist/* /dist' ]
     volumes:
       - ./app/dist:/dist
