--- a/app/app/package.json
+++ b/app/app/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "check": "astro check",
-    "build": "astro check && astro build",
+    "check": "astro check --tsconfig tsconfig.prod.json",
     "build-only": "astro build",
+"build": "npm run check && npm run build-only",
     "astro": "astro",
     "astro:sync": "astro sync",
     "astro:preview": "astro preview",
@@ -27,26 +27,26 @@
   "homepage": "https://github.com/matiboux/env-converter#readme",
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/svelte": "^7.0.9",
+    "@astrojs/svelte": "^7.1.0",
     "@iconify-json/eos-icons": "^1.2.2",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/twemoji": "^1.2.2",
     "@iconify-json/uil": "^1.2.3",
     "@iconify/tailwind4": "^1.0.6",
-    "@nanostores/persistent": "^1.0.0",
-    "@tailwindcss/vite": "^4.1.3",
-    "astro": "^5.12.8",
-    "dotenv": "^16.5.0",
+    "@nanostores/persistent": "^1.1.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.9",
+    "dotenv": "^16.6.1",
     "nanostores": "^1.0.1",
-    "sass": "^1.86.3",
-    "svelte": "^5.26.2",
-    "tailwindcss": "^4.1.3",
+    "sass": "^1.90.0",
+    "svelte": "^5.38.0",
+    "tailwindcss": "^4.1.11",
     "toml": "^3.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.51.1",
-    "@types/node": "^22.14.1",
-    "vitest": "^3.1.1"
+    "@playwright/test": "^1.54.2",
+    "@types/node": "^22.17.1",
+    "vitest": "^3.2.4"
   }
 }
