Update docker config

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,13 +13,13 @@ ARG UID=1001
 # Upstream images
 
 FROM node:22-slim AS node_upstream
-FROM bitnami/nginx:1.29 AS nginx_upstream
+FROM bitnamilegacy/nginx:1.29 AS nginx_upstream
 
 
 # --
 # Base image
 
-FROM node_upstream AS app_base
+FROM node_upstream AS node_base
 
 # Set app directory
 WORKDIR /app
@@ -29,46 +29,57 @@ ENV HOME=/tmp
 
 
 # --
-# Build base image
+# Build binary base image
 
-FROM app_base AS app_build_base
+FROM node_base AS node_build
 
 # Install pnpm
-RUN --mount=type=cache,target=~/.npm \
+RUN --mount=type=cache,id=npm,target=/root/.npm \
 	npm install -g pnpm
+
+
+# --
+# Build base image
+
+FROM node_build AS deps_base
+
+# Copy build configuration
+COPY --link ./app/package.json ./app/pnpm-lock.yaml ./
 
 
 # --
 # Build dev image
 
-FROM app_build_base AS app_build_dev
+FROM deps_base AS deps_dev
 
-# Copy app build configuration
-COPY --link ./app/package.json ./app/pnpm-lock.yaml ./
-
-# Install app development dependencies
+# Install development dependencies
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
 	pnpm install --frozen-lockfile
+
+# Create Astro runtime directory
+RUN mkdir -p ./.astro
 
 
 # --
 # CLI image
 
-FROM app_build_base AS app_cli
+FROM node_build AS app_cli
 
 ARG UID
 
 # Install sudo
 # (hadolint: Ignore non-pinned apt package version)
 # hadolint ignore=DL3008
-RUN --mount=type=cache,sharing=locked,target=/var/cache/apt \
-	--mount=type=cache,sharing=locked,target=/var/lib/apt \
+RUN --mount=type=cache,sharing=locked,id=apt-cache,target=/var/cache/apt \
+	--mount=type=cache,sharing=locked,id=apt-lib,target=/var/lib/apt \
 	apt-get update && \
 	apt-get install -y --no-install-recommends sudo && \
 	echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 # Create user 'user' in group 'root' & 'sudo'
-RUN USERNAME="$(getent passwd "${UID}" | cut -d: -f1)"; \
+# (hadolint: Ignore unchecked pipe failures)
+# hadolint ignore=DL4006
+RUN USERNAME="$(getent passwd "${UID}" 2>/dev/null | cut -d: -f1)"; \
 	if [ -z "${USERNAME}" ]; then \
 		useradd -lm -u "${UID}" -U -G 0,sudo user; \
 	else \
@@ -88,31 +99,42 @@ CMD [ "--help" ]
 
 
 # --
+# Lint image
+
+FROM node_build AS app_lint
+
+ARG UID
+
+# Run as non-root user
+USER ${UID}:0
+
+CMD [ "/bin/sh", "-c", "exit 0" ]
+
+
+# --
 # Test base image
 
-FROM app_build_base AS app_test_base
+FROM node_build AS test_base
 
-# Build arguments
 ARG UID
 
 # Set runtime environment
 ENV APP_ENV=test
-ENV NODE_ENV=development
 
-# Copy app development dependencies
-COPY --link --from=app_build_dev --chown="${UID}:0" /app/node_modules ./node_modules
+# Copy development dependencies
+ENV NODE_ENV=development
+COPY --from=deps_dev --link --chown="${UID}:0" /app/node_modules/ ./node_modules/
 
 
 # --
 # Test unit image
 
-FROM app_test_base AS app_test_unit
+FROM test_base AS test_unit
 
-# Build arguments
 ARG UID
 
 # Copy source code
-COPY --link --chown="${UID}:0" ./app .
+COPY --link --chown="${UID}:0" ./app/ ./
 
 # Run as non-root user
 USER ${UID}:0
@@ -123,24 +145,18 @@ CMD [ "sh", "-c", "pnpm run test:vitest" ]
 # --
 # Test E2E image
 
-FROM app_test_base AS app_test_e2e
+FROM test_base AS test_e2e
 
 # Build arguments
 ARG UID
 
-# Configure Playwright
-ENV PLAYWRIGHT_BROWSERS_PATH=/etc/playwright/browsers
-
 # Install Playwright dependencies
-# (hadolint: Ignore non-pinned apt package version)
-# hadolint ignore=DL3008
-RUN --mount=type=bind,source=./app/package.json,target=package.json \
-	--mount=type=cache,sharing=locked,target=/var/cache/apt \
-	--mount=type=cache,sharing=locked,target=/var/lib/apt \
-	pnpm exec playwright install --with-deps
+ENV PLAYWRIGHT_BROWSERS_PATH=/etc/playwright/browsers
+COPY --from=deps_dev --link --chown="${UID}:0" /app/package.json /app/pnpm-lock.yaml ./
+RUN pnpm exec playwright install --with-deps
 
 # Copy source code
-COPY --link --chown="${UID}:0" ./app .
+COPY --link --chown="${UID}:0" ./app/ ./
 
 # Build application
 RUN pnpm run build-only
@@ -154,23 +170,25 @@ CMD [ "sh", "-c", "pnpm run test:playwright --output /tmp/playwright/test-result
 # --
 # Dev image
 
-FROM app_base AS app_dev
+FROM node_build AS app_dev
 
 ARG UID
 
 # Set runtime environment
 ENV APP_ENV=dev
-ENV NODE_ENV=development
 
-# Copy app development dependencies
-COPY --link --from=app_build_dev --chown="${UID}:0" /app/node_modules ./node_modules
+# Copy development dependencies
+ENV NODE_ENV=development
+COPY --from=deps_dev --link --chown="${UID}:0" /app/.astro/ ./.astro/
+COPY --from=deps_dev --link --chown="${UID}:0" /app/node_modules/ ./node_modules/
 
 # Copy source code
-COPY --link --chown="${UID}:0" ./app .
-RUN mkdir -p ./.astro && chown -R "${UID}:0" ./.astro
+COPY --link --chown="${UID}:0" ./app/ ./
 
 # Create user 'user' in group 'root'
-RUN USERNAME="$(getent passwd "${UID}" | cut -d: -f1)"; \
+# (hadolint: Ignore unchecked pipe failures)
+# hadolint ignore=DL4006
+RUN USERNAME="$(getent passwd "${UID}" 2>/dev/null | cut -d: -f1)"; \
 	if [ -z "${USERNAME}" ]; then \
 		useradd -lm -u "${UID}" -U -G 0 user; \
 	else \
@@ -186,25 +204,25 @@ ENV PORT=${PORT}
 EXPOSE ${PORT}
 
 # Start development server
-CMD [ "sh", "-c", "npm run dev -- --host --port \"${PORT}\"" ]
+CMD [ "sh", "-c", "pnpm run dev --host --port \"${PORT}\"" ]
 
 
 # --
 # Prod build image
 
-FROM app_base AS app_prod_build
+FROM node_build AS app_prod_build
 
 ARG UID
 
 # Set runtime environment
 ENV APP_ENV=prod
-ENV NODE_ENV=production
 
-# Copy app development dependencies
-COPY --link --from=app_build_dev --chown="${UID}:0" /app/node_modules ./node_modules
+# Copy development dependencies
+ENV NODE_ENV=development
+COPY --from=deps_dev --link --chown="${UID}:0" /app/node_modules/ ./node_modules/
 
 # Copy source code
-COPY --link --chown="${UID}:0" ./app .
+COPY --link --chown="${UID}:0" ./app/ ./
 
 # Set app environment variables
 # : Deployment configuration
@@ -227,9 +245,9 @@ ENV ASTRO_ASSETS_PREFIX=${ASTRO_ASSETS_PREFIX}
 # Build application
 ARG BUILD_CHECK='true'
 RUN if [ "${BUILD_CHECK}" = 'true' ]; then \
-		npm run build; \
+		pnpm run build; \
 	else \
-		npm run build-only; \
+		pnpm run build-only; \
 	fi
 
 
@@ -242,7 +260,7 @@ FROM nginx_upstream AS app_prod
 ENV APP_ENV=prod
 
 # Copy app production built files
-COPY --from=app_prod_build --link /app/dist .
+COPY --from=app_prod_build --link /app/dist/ ./
 
 # Set exposed port
 ARG PORT=8080
