--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -52,10 +52,10 @@ jobs:
 
     steps:
 
-      # Steps dependencies
+      # Dependency steps
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       # Execution steps
 
@@ -69,18 +69,18 @@ jobs:
 
       - name: Build for production
         env:
-          # Build configuration
+          # Build
           BUILD_CHECK: 'true' # Run type checks
-          # Deployment configuration
+          # Deployment
           GITHUB_REPOSITORY_URL: https://github.com/${{ github.repository }}
           GITHUB_SHA: ${{ github.sha }}
           VERSION_TAG: ${{ vars.VERSION_TAG }}
-          # Astro configuration
+          # Astro
           ASTRO_SITE_URL: ${{ vars.ASTRO_SITE_URL }}
           ASTRO_BASE_PATH: ${{ vars.ASTRO_BASE_PATH }}
           ASTRO_ASSETS_PREFIX: ${{ vars.ASTRO_ASSETS_PREFIX }}
-          # Application configuration
-          # Add env vars for your application here.
+          # Application
+          # (Add env vars for your application here.)
         run: |
           # docker compose build
           echo '::group::Build details'
@@ -115,10 +115,10 @@ jobs:
 
     steps:
 
-      # Steps dependencies
+      # Dependency steps
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       # Execution steps
 
@@ -132,16 +132,16 @@ jobs:
 
       - name: Build for unit tests
         env:
-          # Deployment configuration
+          # Deployment
           GITHUB_REPOSITORY_URL: https://github.com/${{ github.repository }}
           GITHUB_SHA: ${{ github.sha }}
           VERSION_TAG: ${{ vars.VERSION_TAG }}
-          # Astro configuration
+          # Astro
           ASTRO_SITE_URL: ${{ vars.ASTRO_SITE_URL }}
           ASTRO_BASE_PATH: ${{ vars.ASTRO_BASE_PATH }}
           ASTRO_ASSETS_PREFIX: ${{ vars.ASTRO_ASSETS_PREFIX }}
-          # Application configuration
-          # Add env vars for your application here.
+          # Application
+          # (Add env vars for your application here.)
         run: |
           # docker compose build
           echo '::group::Build details'
@@ -228,10 +228,10 @@ jobs:
 
     steps:
 
-      # Steps dependencies
+      # Dependency steps
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       # Execution steps
 
@@ -245,16 +245,16 @@ jobs:
 
       - name: Build for E2E tests
         env:
-          # Deployment configuration
+          # Deployment
           GITHUB_REPOSITORY_URL: https://github.com/${{ github.repository }}
           GITHUB_SHA: ${{ github.sha }}
           VERSION_TAG: ${{ vars.VERSION_TAG }}
-          # Astro configuration
+          # Astro
           ASTRO_SITE_URL: ${{ vars.ASTRO_SITE_URL }}
           ASTRO_BASE_PATH: ${{ vars.ASTRO_BASE_PATH }}
           ASTRO_ASSETS_PREFIX: ${{ vars.ASTRO_ASSETS_PREFIX }}
-          # Application configuration
-          # Add env vars for your application here.
+          # Application
+          # (Add env vars for your application here.)
         run: |
           # docker compose build
           echo '::group::Build details'
